@@ -1,3 +1,9 @@
+2015-04-14  Gavin Smith  <gavinsmith0123@gmail.com>
+
+	* tp/Texinfo/Plaintext.pm (_printindex_formatted): Don't call 
+	Texinfo::Convert::Unicode::string_width with the part of the 
+	string we have already called it on.
+
 2015-04-13  Gavin Smith  <gavinsmith0123@gmail.com>
 
 	* tp/Texinfo/Common.pm (count_bytes): Add special handling of 
